# start-clion-rp2040

./: .gitignore  CMakeLists.txt  README.md
